$Header$
===============================================================

140	Luke Howard <lukeh@padl.com>

	* fix configure bug for DISABLE_SO_KEEPALIVE

139	Luke Howard <lukeh@padl.com>

	* updated INSTALL file with boilerplate 
	* fixed pointer error in ldap-nss.c

138	Luke Howard <lukeh@padl.com>

	* close config file FILE * if out of buffer space
	  for parsing search descriptor
	* fixed bug where non-recognized directives in
	  ldap.conf would cause the configuration file to
	  not be parsed at all, if they were the last
	  entries in the config file.
	  
137.1	Luke Howard <lukeh@padl.com>

	* patch from nalin@redhat.com; return { NULL } not
	  NULL for no group members
	* cleaned up usage of libc-lock.h weak aliases
	  to pthreads API; use in ltf.c also
	* use __libc_atfork() or pthread_atfork() to
	  close off connection on fork, rather than
	  checking PIDs; this is expensive and breaks
	  on Linux where each thread may have a 
	  different PID.

137	Gabor Gombas <gombasg@inf.elte.hu>

	* build nss_ldap as a loadable module on AIX
	* doco on AIX

136	Luke Howard <lukeh@padl.com>

	* define -DPIC for FreeBSD
	* link with -shared not --shared
	* fixes for AIX

135	Luke Howard <lukeh@padl.com>

	* merged ldap.conf
	* fixed bug in concatenating relative search
	  bases in ldap-nss.c (profile support)

134	Luke Howard <lukeh@padl.com>

	* fixed Makefile.am
	* reordered DB search order in util.c

133	Luke Howard <lukeh@padl.com>

	* make /usr/lib directory in Makefile.am
	* new spec file from Joe Little

132	Luke Howard <lukeh@padl.com>

	* fixed rebind preprocessor logic

131	Luke Howard <lukeh@padl.com>

	* created files for automake happiness

130	Luke Howard <lukeh@padl.com>

	* fixed typo preventing build with Netscape
	  client library

129	Luke Howard <lukeh@padl.com>

	* updated version number
	* fixed build bug on Solaris

128	Luke Howard <lukeh@padl.com>

	* fixed logic bug in util.c introduced in
	  nss_ldap-127

127	Luke Howard <lukeh@padl.com>
