@@ -2,7 +2,7 @@ AC_INIT(ldap-nss.c)
 AC_CANONICAL_SYSTEM
 AC_PREFIX_DEFAULT()
 
-AM_INIT_AUTOMAKE(nss_ldap, 139)
+AM_INIT_AUTOMAKE(nss_ldap, 140)
 AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CC
